fix(frontend): fix header alignement

--- a/frontend_lib/src/component/Breadcrumbs/Breadcrumbs.styl
+++ b/frontend_lib/src/component/Breadcrumbs/Breadcrumbs.styl
@@ -6,9 +6,8 @@
   padding 0
   list-style none
   font-size metadataFontSize
-  &.hidden {
-    visibility hidden
-  }
+  &.hidden
+    display none
   &__item
     white-space nowrap
     text-overflow ellipsis
